# RICK-MK2

./: .editorconfig  .gitattributes  .gitignore  README.md  README.txt  README_BACKUP.md  backup.ps1  backup_items.txt  commands.md  config.yaml  data.json  journal.json  manage.ps1  pyproject.toml  pytest.ini  requirements.txt  restore.ps1  rick_memory.json  rick_memory.yaml  rick_startup.py  setup.py
.github/workflows/: ci.yml
Rick_MK2.egg-info/: PKG-INFO  SOURCES.txt
Rick_MK2_old/: CHANGELOG.md  README.md  commands.md  config.json  core.py  log.py  pyproject.toml  rick.py  status.py  storage.py  templates.py
Rick_MK2_old/Rick_MK2/: cli.py  demo.py
Rick_MK2_old/Rick_MK2.egg-info/: PKG-INFO  SOURCES.txt
Rick_MK2_old/tests/: test_basic.py  test_core.py
Rick_MK2_v0.2.1/: README.md  pyproject.toml
Rick_MK2_v0.2.1/Rick_MK2/: cli.py
backups/20250823_223308/src/Rick_MK2/: cli.py  journal.py
rick/: __init__.py  brains.py  cli.py  config.yaml  logger.py  memory.json  memory.py  perks.py  rpg.py  storage.py  style.py
rick/core/: commands.py  logger.py  rick.py
scripts/: run_rick.py
src/: config.py  logger.py
src/Rick_MK2/: README.md  __init__.py  challenge.py  cli.py  cli.py.bak  core.py  demo.py  inventory.py  inventory.py.bak  journal.py  main.py  quest.py  quests.py  rick.py  rick_main.py  stats.py  storage.py  xp.py  xp.py.bak
src/Rick_MK2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_basic.py  test_loader.py
